// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextAreaInput /> should render character counter correctly 1`] = `
<div
  className="text-area-input"
>
  <div
    className="mode_input text rij_verplicht"
  >
    <styled.label
      htmlFor="formname"
    >
      display
    </styled.label>
    <div
      className="text-area-input__control"
    >
      <ForwardRef
        data-testid="name"
        helpText="0/300 tekens"
        id="formname"
        maxRows={15}
        name="name"
        placeholder="placeholder"
        rows={2}
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`<TextAreaInput /> should render character counter with value correctly 1`] = `
<div
  className="text-area-input"
>
  <div
    className="mode_input text rij_verplicht"
  >
    <styled.label
      htmlFor="formname"
    >
      display
    </styled.label>
    <div
      className="text-area-input__control"
    >
      <ForwardRef
        data-testid="name"
        helpText="4/300 tekens"
        id="formname"
        maxRows={15}
        name="name"
        placeholder="placeholder"
        rows={2}
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`<TextAreaInput /> should render correctly 1`] = `
<div
  className="text-area-input"
>
  <div
    className="mode_input text rij_verplicht"
  >
    <styled.label
      htmlFor="formname"
    >
      display
    </styled.label>
    <div
      className="text-area-input__control"
    >
      <ForwardRef
        data-testid="name"
        helpText={false}
        id="formname"
        maxRows={15}
        name="name"
        placeholder="placeholder"
        rows={2}
        value=""
      />
    </div>
  </div>
</div>
`;
